@@ -1,0 +1,2 @@
+<h2>Configuration</h2>
+<?php include_partial('configForm', array('form' => $form)) ?>
